# humind

./: .gitignore  CHANGELOG.md  INTEGRATIONS.md  INTEROP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: 01_perception_pipeline.py  02_reinforcement_learning.py  03_memory_and_association.py  04_systems_thinking.py  05_two_minds_tandem.py  06_negation_and_affect.py  07_intent_classification.py  08_working_memory_decay.py  09_spreading_activation.py  10_predictive_coding.py  11_td_credit_assignment.py  12_online_valence_learning.py  13_cls_consolidation.py  14_feedback_loops.py  15_leverage_points.py  16_priorities_ranking.py  17_causal_extraction.py  18_full_cognitive_loop.py  19_multi_agent_broadcast.py  20_robustness_and_errors.py  21_introspection_snapshot.py  _common.py  run_all.py
docs/: ARCHITECTURE.md  DEMOS.md
examples/: cluster_demo.py  help.txt
humind/: __init__.py  addins.py  cli.py  connect.py  extract.py  learning.py  memory.py  mind.py  systems.py
tests/: test_addins.py  test_addins_edge.py  test_cli_edge.py  test_cluster_demo.py  test_cognition.py  test_connect.py  test_connect_edge.py  test_demos.py  test_extract_edge.py  test_humind.py  test_introspect.py  test_learning_edge.py  test_memory_edge.py  test_mind_edge.py  test_systems_edge.py
