[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humind"
version = "0.2.0"
description = "Cognitive-architecture-inspired NL context engine — entities/intent/affect + working/episodic/semantic memory, speaking agentlex"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-COCL-1.0" }
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["nlp", "cognitive-architecture", "context-extraction", "memory", "agents", "symbolic-ai", "act-r"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["agentlex @ git+https://github.com/cognis-digital/agentlex.git"]

[project.urls]
Homepage = "https://github.com/cognis-digital/humind"

[project.scripts]
humind = "humind.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["humind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
