[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humind"
version = "0.3.1"
description = "Cognitive-architecture-inspired NL context engine — entities/intent/affect/causality + working/episodic/semantic/associative memory, TD(lambda) reinforcement, predictive coding & systems-thinking, speaking agentlex"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-COCL-1.0" }
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["nlp", "cognitive-architecture", "context-extraction", "memory", "agents",
            "symbolic-ai", "act-r", "reinforcement-learning", "td-lambda", "hebbian",
            "predictive-coding", "systems-thinking", "causal-loop", "neurobiology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["agentlex @ git+https://github.com/cognis-digital/agentlex.git"]

[project.urls]
Homepage = "https://github.com/cognis-digital/humind"

[project.scripts]
"humind-emit" = "humind.connect:emit_main"
humind = "humind.cli:main"

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["humind"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
